--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Using-svg</title>
+  <title>SVG Icons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-
   <ul>
+
     <li>
       <a href="#">
         <i class="icon">
-          <svg><use xlink:href="images/dino-icons.svg#branchiosaurus"></use></svg>
+        <svg><use xlink:href="images/dino-icons.svg#brachiosaurus"></use></svg>
         </i>
-        <span>Branchiosaurus</span>
+        <span>Brachiosaurus</span>
       </a>
     </li>
 
     <li>
       <a href="#">
         <i class="icon">
-          <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus"></use></svg>
+        <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus"></use></svg>
         </i>
         <span>Micropachycephalosaurus</span>
       </a>
@@ -30,12 +30,12 @@
     <li>
       <a href="#">
         <i class="icon">
-          <svg><use xlink:href="images/dino-icons.svg#velociraptor"></use></svg>
+        <svg><use xlink:href="images/dino-icons.svg#velociraptor"></use></svg>
         </i>
         <span>Velociraptor</span>
       </a>
     </li>
-  </ul>
 
+  </ul>
 </body>
 </html>
